--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,12 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.17.0</version>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
